Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_Closed_Date__c</fullName>
    <label>TIP Closed Date</label>
    <type>Date</type>
</CustomField>