Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Comments_for_Rehab__c.field-meta.xml
<CustomField>
    <fullName>TIP_Comments_for_Rehab__c</fullName>
    <inlineHelpText>These comments will be sent over to the Rehab record when you hit the "Ready to Rekey button."</inlineHelpText>
    <label>TIP Comments for Rehab</label>
    <type>TextArea</type>
</CustomField>