Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Expected_New_Lease_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_Expected_New_Lease_Signing_Date__c</fullName>
    <label>Expected New Lease Signing Date</label>
    <type>Date</type>
</CustomField>