Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Leasing_Notes__c.field-meta.xml
<CustomField>
    <fullName>TIP_Leasing_Notes__c</fullName>
    <label>TIP Leasing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>