Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_New_Lease_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_New_Lease_Signed_Date__c</fullName>
    <label>Lease Signed Date</label>
    <type>Date</type>
</CustomField>