Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_New_Lease_Submitted_for_UW__c.field-meta.xml
<CustomField>
    <fullName>TIP_New_Lease_Submitted_for_UW__c</fullName>
    <label>Lease Submitted for UW</label>
    <type>Date</type>
</CustomField>