Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_New_Lease_UW_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_New_Lease_UW_Rejected_Date__c</fullName>
    <label>TIP New Lease UW Rejected Date</label>
    <type>Date</type>
</CustomField>