Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Notes_from_data_migration__c.field-meta.xml
<CustomField>
    <fullName>TIP_Notes_from_data_migration__c</fullName>
    <label>TIP Notes from data migration</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>