Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Occupant_Email__c.field-meta.xml
<CustomField>
    <fullName>TIP_Occupant_Email__c</fullName>
    <label>Occupant Email</label>
    <type>Email</type>
</CustomField>