Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Occupant_Name__c.field-meta.xml
<CustomField>
    <fullName>TIP_Occupant_Name__c</fullName>
    <label>Occupant Name(s)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>