Custom--app/main/default/objects/TIP_Tracking__c/fields/Tip_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Tip_Record_Count__c</fullName>
    <formula>IF( Acquisition_Date__c =  TODAY() , 1, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tip Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>