Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Status__c.field-meta.xml
<CustomField>
    <fullName>TIP_Status__c</fullName>
    <label>TIP Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TIP - New (Needs Driver)</fullName>
                <default>true</default>
                <label>TIP - New (Needs Driver)</label>
            </value>
            <value>
                <fullName>TIP - Driver Assigned</fullName>
            </value>
            <value>
                <fullName>TIP - DK Initial Contact</fullName>
            </value>
            <value>
                <fullName>TIP - Voluntary Move-Out</fullName>
            </value>
            <value>
                <fullName>TIP - CFK Negotiations</fullName>
            </value>
            <value>
                <fullName>TIP - Lease Negotiations</fullName>
            </value>
            <value>
                <fullName>TIP - Eviction</fullName>
            </value>
            <value>
                <fullName>Closed - Leased (Assumed)</fullName>
            </value>
            <value>
                <fullName>Closed - Leased (New)</fullName>
            </value>
            <value>
                <fullName>Closed - Vacant</fullName>
            </value>
            <value>
                <fullName>Closed  - Purchased Rented</fullName>
            </value>
            <value>
                <fullName>Closed - Acq Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed - For Sale/Disposition</fullName>
            </value>
            <value>
                <fullName>HOLD - Abd. Property Notice</fullName>
            </value>
            <value>
                <fullName>HOLD - BK</fullName>
            </value>
            <value>
                <fullName>HOLD - Deed</fullName>
            </value>
            <value>
                <fullName>HOLD - Limbo</fullName>
            </value>
            <value>
                <fullName>HOLD - Do Not Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>