Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Type__c.field-meta.xml
<CustomField>
    <fullName>TIP_Type__c</fullName>
    <inlineHelpText>Remediation should only be used if a TIP was closed vacant, then a diff occupant, such as a squatter, moved into the property). Turn TIP should be selected if property has had a lease in place, then has a squatter occupy the property after the lease turn.</inlineHelpText>
    <label>TIP Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Post-Acquisition</fullName>
                <default>true</default>
                <label>Post-Acquisition</label>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
            <value>
                <fullName>Turn TIP</fullName>
            </value>
            <value>
                <fullName>Disposition</fullName>
            </value>
            <value>
                <fullName>Post Acquisition – Purchased Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>