Custom--app/main/default/objects/TIP_Tracking__c/fields/Trash_Cans__c.field-meta.xml
<CustomField>
    <fullName>Trash_Cans__c</fullName>
    <label>Trash Cans</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>