Custom--app/main/default/objects/TIP_Tracking__c/fields/Vacancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Reason__c</fullName>
    <inlineHelpText>This field is required when the status is Closed - Vacant.</inlineHelpText>
    <label>Vacancy Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TIP_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Vacant on Arrival</fullName>
            </value>
            <value>
                <fullName>Move-Out</fullName>
            </value>
            <value>
                <fullName>CFK</fullName>
            </value>
            <value>
                <fullName>Eviction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>