Custom--app/main/default/objects/TIP_Tracking__c/fields/Water__c.field-meta.xml
<CustomField>
    <fullName>Water__c</fullName>
    <label>Water</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>