Custom--app/main/default/objects/TIP_Tracking__c/fields/Welcome_Pack_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Pack_Delivery_Method__c</fullName>
    <label>Welcome Pack Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hand Delivered</fullName>
            </value>
            <value>
                <fullName>Left on Door</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>