Custom--app/main/default/objects/TIP_Tracking__c/fields/Windows__c.field-meta.xml
<CustomField>
    <fullName>Windows__c</fullName>
    <label>Windows</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Nothing Visible</fullName>
            </value>
            <value>
                <fullName>Furniture Visibile</fullName>
            </value>
            <value>
                <fullName>Furniture Visible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>