Custom--app/main/default/objects/TIP_Tracking__c/fields/Yardi_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Code_Text__c</fullName>
    <description>This field will be populated with the Yardi code via a workflow to ensure that the Yardi code can be accessed via search results.</description>
    <externalId>true</externalId>
    <label>Yardi Code (Text)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>