Custom--app/main/default/objects/TIP_Tracking__c/recordTypes/Purchased_Rented.recordType-meta.xml
<RecordType>
    <fullName>Purchased_Rented</fullName>
    <active>true</active>
    <label>Purchased Rented</label>
</RecordType>