Custom--app/main/default/objects/TIP_Tracking__c/recordTypes/Standard_TIP.recordType-meta.xml
<RecordType>
    <fullName>Standard_TIP</fullName>
    <active>true</active>
    <label>Standard TIP</label>
</RecordType>