Custom--app/main/default/objects/TIP_Tracking__c/validationRules/Contact_Attempt_2_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Attempt_2_Date</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId = '012E00000005gTA' &amp;&amp; Contact_Attempt_2_Date__c  > DATE(2013,08,29) &amp;&amp; 
ISBLANK(Contact_Attempt_2_Time__c) &amp;&amp;
ISBLANK(Contact_2_Comments__c) &amp;&amp;
ISPICKVAL(Contact_2_Result__c,"")</errorConditionFormula>
    <errorDisplayField>Contact_Attempt_2_Time__c</errorDisplayField>
    <errorMessage>If Contact Attempt 2 Date is entered, Contact Attempt 2 Time, and Contact 2 Result should be entered also.</errorMessage>
</ValidationRule>