Custom--app/main/default/objects/TIP_Tracking__c/validationRules/Contact_Attempt_3_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Attempt_3_Date</fullName>
    <active>false</active>
    <errorConditionFormula>RecordTypeId = '012E00000005gTA' &amp;&amp; Contact_Attempt_3_Date__c > DATE(2013,08,29) &amp;&amp; 
ISBLANK(Contact_Attempt_3_Time__c) &amp;&amp;
ISBLANK(Contact_3_Comments__c) &amp;&amp; 
ISPICKVAL(Contact_3_Result__c,"")</errorConditionFormula>
    <errorDisplayField>Contact_Attempt_3_Time__c</errorDisplayField>
    <errorMessage>If Contact Attempt 3 Date is entered, Contact Attempt 3 Time, and Contact 3 Result should be entered also.</errorMessage>
</ValidationRule>