Custom--app/main/default/objects/TIP_Tracking__c/validationRules/Initial_Contact_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Initial_Contact_Date</fullName>
    <active>true</active>
    <errorConditionFormula>RecordTypeId = '012E00000005gTA' &amp;&amp; Initial_Contact_Date__c > DATE(2013,04,30) &amp;&amp;  
ISPICKVAL(Initial_Contact_Result__c,"")</errorConditionFormula>
    <errorDisplayField>Initial_Contact_Time__c</errorDisplayField>
    <errorMessage>If Initial Contact Date is entered, Initial Contact Time, and Initial Contact Result should be entered also.</errorMessage>
</ValidationRule>