Custom--app/main/default/objects/TIP_Tracking__c/validationRules/Vacancy_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Vacancy_Reason_Required</fullName>
    <active>true</active>
    <description>When status is changed to Closed-Vacant a racnecy reason must be entered.</description>
    <errorConditionFormula>ISBLANK(text(Vacancy_Reason__c )) &amp;&amp; (ispickval(TIP_Status__c,'Closed - Vacant')) &amp;&amp; 
RecordType.DeveloperName != 'Purchased_Rented'</errorConditionFormula>
    <errorMessage>Vacancy Reason must be entered when Status is Closed Vacant</errorMessage>
</ValidationRule>