Custom--app/main/default/objects/TIP_Tracking__c/listViews/All_Open_TIPs.listView-meta.xml
<ListView>
    <fullName>All_Open_TIPs</fullName>
    <booleanFilter>1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7</booleanFilter>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Property_City__c</columns>
    <columns>Yardi_Code_Text__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Occupancy_Status_Acquisition__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PM_Portfolio_Manager__c</columns>
    <columns>TIP_Coordinator__c</columns>
    <columns>Expected_Close_Date__c</columns>
    <columns>TIP_Status__c</columns>
    <columns>Driver_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>startsWith</operation>
        <value>TIP</value>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open TIP: All</label>
</ListView>