Custom--app/main/default/objects/TIP_Tracking__c/listViews/All_TIPs.listView-meta.xml
<ListView>
    <fullName>All_TIPs</fullName>
    <columns>NAME</columns>
    <columns>TIP_Coordinator__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Yardi_Code_Text__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Occupancy_Status_Acquisition__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>TIP_Status__c</columns>
    <columns>CFK_Status__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All TIPs</label>
</ListView>