Custom--app/main/default/objects/TIP_Tracking__c/listViews/Drives_Assigned_to_Me_Active.listView-meta.xml
<ListView>
    <fullName>Drives_Assigned_to_Me_Active</fullName>
    <columns>NAME</columns>
    <columns>TIP_Status__c</columns>
    <columns>Portfolio__c</columns>
    <columns>Occupancy_Status_Acquisition__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Driver_Assigned_to_Me__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>DK_Complete_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>startsWith</operation>
        <value>TIP</value>
    </filters>
    <label>Drives Assigned to Me (Active)</label>
</ListView>