Custom--app/main/default/objects/TIP_Tracking__c/listViews/HOLD_Aband_Prop.listView-meta.xml
<ListView>
    <fullName>HOLD_Aband_Prop</fullName>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>Occupancy_Status_Acquisition__c</columns>
    <columns>TIP_Status__c</columns>
    <columns>Abandoned_Property__c</columns>
    <columns>Abandoned_Prop_Notice_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>HOLD - Abd. Property Notice</value>
    </filters>
    <label>TIP Status: HOLD - Aband. Prop</label>
</ListView>