Custom--app/main/default/objects/TIP_Tracking__c/listViews/HOLDBK.listView-meta.xml
<ListView>
    <fullName>HOLDBK</fullName>
    <columns>NAME</columns>
    <columns>Portfolio__c</columns>
    <columns>Acq_Reporting_Date__c</columns>
    <columns>Acquisition_Date__c</columns>
    <columns>TIP_Status__c</columns>
    <columns>BK_Status__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>HOLD - BK</value>
    </filters>
    <label>TIP Status: HOLD - BK</label>
</ListView>