Custom--app/main/default/objects/TIP_Tracking__c/listViews/Open_Tip_CFK_Negotiations.listView-meta.xml
<ListView>
    <fullName>Open_Tip_CFK_Negotiations</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <columns>CFK_Indication_of_Interest_Date__c</columns>
    <columns>CFK_Offered_Amount__c</columns>
    <columns>CFK_Agreed_Move_Out_Date__c</columns>
    <columns>CFK_Cashiers_Check_Rqst_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>TIP - CFK Negotiations</value>
    </filters>
    <label>Open Tip: CFK Negotiations</label>
</ListView>