Custom--app/main/default/objects/TIP_Tracking__c/listViews/Open_TIP_DK_Initial_Contact.listView-meta.xml
<ListView>
    <fullName>Open_TIP_DK_Initial_Contact</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <columns>Initial_Contact_Result__c</columns>
    <columns>Initial_Contact_Comments__c</columns>
    <columns>Evict_Statutory_Notice_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>TIP - DK Initial Contact</value>
    </filters>
    <label>Open TIP: DK Initial Contact</label>
</ListView>