Custom--app/main/default/objects/TIP_Tracking__c/listViews/Open_TIP_Driver_Assigned.listView-meta.xml
<ListView>
    <fullName>Open_TIP_Driver_Assigned</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <columns>Initial_Contact_Result__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>TIP - Driver Assigned</value>
    </filters>
    <label>Open TIP: Driver Assigned</label>
</ListView>