Custom--app/main/default/objects/TIP_Tracking__c/listViews/Open_TIP_Eviction_in_Process.listView-meta.xml
<ListView>
    <fullName>Open_TIP_Eviction_in_Process</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <columns>Initial_Notice_Date__c</columns>
    <columns>Evict_Statutory_Notice_Required__c</columns>
    <columns>Evict_Statutory_Notice_End_Date__c</columns>
    <columns>Recommend_Referral_to_Eviction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TIP_Status__c</field>
        <operation>equals</operation>
        <value>TIP - Eviction</value>
    </filters>
    <label>Open TIP: Eviction</label>
</ListView>