Custom--app/main/default/objects/TIP_Tracking__c/listViews/Open_TIP_Eviction_Notice_Expired.listView-meta.xml
<ListView>
    <fullName>Open_TIP_Eviction_Notice_Expired</fullName>
    <columns>NAME</columns>
    <columns>Yardi_Property_Code__c</columns>
    <columns>Portfolio__c</columns>
    <columns>DK_Assigned_Date__c</columns>
    <columns>DK_Driver_Assigned__c</columns>
    <columns>TIP_Status__c</columns>
    <columns>Initial_Contact_Date__c</columns>
    <columns>Initial_Notice_Date__c</columns>
    <columns>Evict_Statutory_Notice_Required__c</columns>
    <columns>Evict_Statutory_Notice_End_Date__c</columns>
    <columns>Recommend_Referral_to_Eviction__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Evict_Statutory_Notice_End_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>TIP_Status__c</field>
        <operation>startsWith</operation>
        <value>HOLD,TIP</value>
    </filters>
    <label>Open TIP: Eviction Notice Expired</label>
</ListView>